[gd_scene load_steps=4 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://bensound-summer.ogg" type="AudioStream" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 160, 80 )

[node name="Node" type="Node"]
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0901961, 0.207843, 0.305882, 1 )

[node name="Buton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -80.0
margin_right = 160.0
margin_bottom = 80.0
text = "Button"

[node name="TouchScreenButton" type="TouchScreenButton" parent="Buton"]
position = Vector2( 160, 80 )
shape = SubResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
[connection signal="pressed" from="Buton" to="." method="_on_Buton_pressed"]
[connection signal="pressed" from="Buton/TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]
[connection signal="released" from="Buton/TouchScreenButton" to="." method="_on_TouchScreenButton_released"]
